--- a/app/views/director_template/eldest.html.erb
+++ b/app/views/director_template/eldest.html.erb
@@ -2,5 +2,5 @@
 
 
 <p>
-  The eldest director in our dataset right now is <%=@oldest.name%>, born on <%= @oldest.dob.strftime("%B %d, %Ye") %>.
+  The eldest director in our dataset right now is <a href="/directors/<%=@oldest.id%>"> <%=@oldest.name%> </a>, born on <%= @oldest.dob.strftime("%B %d, %Y") %>.
 </p>
