--- a/app/views/actor_template/show.html.erb
+++ b/app/views/actor_template/show.html.erb
@@ -1,6 +1,6 @@
-<h1>Director #<%=@id%> details </h1>
+<h1>Actor #<%=@id%> details</h1>
 
-<a href=/directors> Go back </a>
+<a href=/actors> Go back </a>
 
 <hr>
 
@@ -9,42 +9,42 @@
     Name
   </dt>
   <dd>
-    <%= @detail.name%>
+    <%=@detail.name%>
   </dd>
 
   <dt>
     Dob
   </dt>
   <dd>
-    <%= @detail.dob%>
+    <%=@detail.dob%>
   </dd>
 
   <dt>
     Bio
   </dt>
   <dd>
-    <%= @detail.bio%>
+    <%=@detail.bio%>
   </dd>
 
   <dt>
     Image
   </dt>
   <dd>
-    <img src="http://robohash.org/<%= @detail.image %>"style="width:250px;">
+    <img src="<%=@detail.image%>" style="width:250px;">
   </dd>
 
   <dt>
     Created at
   </dt>
   <dd>
-    <%= time_ago_in_words(@detail.created_at)%>
+    <%=@detail.created_at%>
   </dd>
 
   <dt>
     Updated at
   </dt>
   <dd>
-    <%= time_ago_in_words (@detail.updated_at)%>
+    <%=@detail.updated_at%>
   </dd>
 </dl>
 
@@ -55,12 +55,9 @@
 <table border="1">
 <% @filmography.all.each do |films| %>
   <tr>
-    <td><%= films.id %></td>
-    <td>
-      <img src= "http://robohash.org/<%= films.image %>">
-    </td>
     <td><%= films.title %></td>
-    <td><%= @detail.name %></td>
+    <td><%= films.year%></td>
+    <td><%= films.director_id %></td>
     <td>
       <a href="/movies/<%= films.id %>">
         Show details
