--- a/app/views/actor_template/show.html.erb
+++ b/app/views/actor_template/show.html.erb
@@ -1,4 +1,4 @@
-<h1>Actor #<%=@id%> details</h1>
+<h1>Actor #<%=@the_actor.id%> details</h1>
 
 <a href=/actors> Go back </a>
 
@@ -9,42 +9,42 @@
     Name
   </dt>
   <dd>
-    <%=@detail.name%>
+    <%=@the_actor.name%>
   </dd>
 
   <dt>
     Dob
   </dt>
   <dd>
-    <%=@detail.dob%>
+    <%=@the_actor.dob%>
   </dd>
 
   <dt>
     Bio
   </dt>
   <dd>
-    <%=@detail.bio%>
+    <%=@the_actor.bio%>
   </dd>
 
   <dt>
     Image
   </dt>
   <dd>
-    <img src="<%=@detail.image%>" style="width:250px;">
+    <img src="<%=@the_actor.image%>" style="width:250px;">
   </dd>
 
   <dt>
     Created at
   </dt>
   <dd>
-    <%=@detail.created_at%>
+    <%=@the_actor.created_at%>
   </dd>
 
   <dt>
     Updated at
   </dt>
   <dd>
-    <%=@detail.updated_at%>
+    <%=@the_actor.updated_at%>
   </dd>
 </dl>
 
@@ -53,15 +53,66 @@
 <h2>Filmography</h2>
 
 <table border="1">
-<% @new_array.each do |films| %>
   <tr>
-    <td><%= Movie.where({:id=>films}).first.title %></td>
-    <td><%= Movie.where({:id=>films}).first.year %></td>
-    <% director_id = Movie.where({:id=>films}).first.director_id %>
-    <td><%= Director.where({:id=>director_id}).first.name %></td>
-    <td><%= Character.where({:movie_id=>films}).where({:actor_id=>@id}).first.name%>
-    <td><a href="/movies/<%= Movie.where({:id=>films}).first.id %>">Show details</a></td>
+    <th>
+      Title
+    </th>
 
+    <th>
+      Year
+    </th>
+
+    <th>
+      Director
+    </th>
+
+    <th>
+      Character name
+    </th>
+
+    <th>
+    </th>
   </tr>
+
+  <% a_id = @the_actor.id %>
+
+  <% matching_characters = Character.where({ :actor_id => a_id }) %>
+
+  <% matching_characters.each do |a_character| %>
+    <% m_id = a_character.movie_id %>
+
+    <% matching_movies = Movie.where({ :id => m_id }) %>
+
+    <% the_movie = matching_movies.at(0) %>
+
+    <tr>
+      <td>
+        <%= the_movie.title %>
+      </td>
+
+      <td>
+        <%= the_movie.year %>
+      </td>
+
+      <td>
+        <% d_id = the_movie.director_id %>
+        
+        <% matching_directors = Director.where({ :id => d_id }) %>
+        
+        <% the_director = matching_directors.at(0) %>
+
+        <%= the_director.name %>
+      </td>
+
+      <td>
+        <%= a_character.name %>
+      </td>
+
+      <td>
+        <a href="/movies/<%= the_movie.id %>">
+          Show details
+        </a>
+      </td>
+    </tr>
   <% end %>
-  </table>
+</table>
